src/pj/poco/test/neg/NDOLLA02.POC
/* Checks to see that '$' character doesn't bomb error handler */
#pragma poco echo "expect>expecting a number, variable, or string got '$'"

main()
{
int i;

$ = 10;
puts("This shouldn't compile");
}
